# devFleet

./: .env.example  .gitignore  LICENSE  README.md  UPDATE_PLAN.md  eslint.config.js  forge.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.main.config.ts  vite.renderer.config.ts
.cursor/: mcp.json
.github/workflows/: ci.yml  release-macos.yml  release.yml
docs/: development-workflow.md  mac-app-store-distribution.md  runtime-analysis.md
scripts/: generate-antd-static-css.tsx  pack-smoke.ts  sync-app-version.ts  translate-locales.ts
src/: App.css  App.tsx  index.css  main.ts  preload.ts  renderer.ts  renderer.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  macos-about-window.json  macos-native-ui.json  macos-settings-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  detector.rs  lib.rs  main.rs  models.rs  node_manager.rs  node_processes.rs  project.rs  shell_context.rs
src/components/: AboutWindow.css  AboutWindow.tsx  EditorBrandIcon.tsx  EditorButton.tsx  ErrorBoundary.tsx  LogPanel.css  LogPanel.tsx  NodeVersionDrawer.css  NodeVersionDrawer.tsx  NodeVersionSelect.tsx  ProjectCard.css  ProjectCard.tsx  ProjectHeader.tsx  ProjectManager.css  ProjectManager.tsx  SettingsWindow.css  SettingsWindow.tsx  TitleBar.css  TitleBar.tsx  TodoList.css  TodoList.tsx  UpdateChecker.css  UpdateChecker.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useEditors.ts  useKeyboardShortcuts.ts  useNvmInfo.ts  useProjects.ts
src/i18n/: index.ts  translation.config.json
src/i18n/locales/: en-US.json  ja-JP.json  zh-CN.json
src/lib/: autostart.ts  macosNative.ts  projectEvents.ts  tauri.ts
src/pages/: AppShell.tsx  MainWindowPage.tsx
src/routes/: createAppRouter.tsx
src/theme/: antdTheme.ts
src/types/: project.ts
src/utils/: projectManager.ts
